2017-03-08  Edward Jones  <ed.jones@embecosm.com>

	* script/combined-elimination.py (build_and_measure): Remove
	jobs argument.
	(combined_elimination): Likewise.
	* script/feature-extract.py: Remove --jobs flags, run
	feature extraction single threaded.
	* script/generate-builds.py (generate_configurations): Remove
	jobs argument.
	* script/mageec.py (build): Remove jobs argument, build
	benchmarks single threaded.
	(feature_extract): Likewise.

2017-03-07  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database.cpp (Database::appendDatabase): Select
	parameter types from the other database, not the same
	database we're merging with.

2017-03-07  Edward Jones  <ed.jones@embecosm.com>

	* script/combined-elimination.py: Fix check of results from
	combined elimination test runs.

2017-03-07  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database.cpp (Database::newFeatureSet): Fix implementation
	to avoid a race hazard when adding features to the database.
	(Database::newParameterSet): Avoid race hazard when adding
	parameters to the database.

2017-03-07  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Database.h (SQLTransaction): Add different
	transaction types.
	* lib/Database.cpp (SQLTransaction): Likewise.

2017-03-07  Edward Jones  <ed.jones@embecosm.com>

	* script/measure-code-size.py: Use realpath to get the
	path of source files in the executable instead of abspath.

2017-03-07  Edward Jones  <ed.jones@embecosm.com>

	* script/mageec.py: Use lndir to create a shadow copy of a
	directory with symlinks to the original source.

2017-03-07  Edward Jones  <ed.jones@embecosm.com>

	* scripts/combined-elimination.py: Do multiple flag tests
	during combined elimination in parallel, using a process
	pool.

2017-03-07  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database.cpp: Set timeout for access to the database
	to around 3 hours.

2017-03-06  Edward Jones  <ed.jones@embecosm.com>

	* scripts/combined-elimination.py: Allow incomplete results